# oshw-verilog-eval

./: .gitignore  README.md  assets.json  pyproject.toml
assets/axi/: Bender.yml
assets/opentitan/: Bender.yml
assets/opentitan/patches/: 0001-oshw-fpv-and-parse-fixes.patch
scripts/: .md2txt_helper.py  bench-gen.sh  spec-gen
